--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,20 @@ body {
 	filter: dropshadow(color=#000000, offx=0, offy=1);	
 }
 h1 {
-	font-size:68px;
+	font-size:70px;
 	letter-spacing:-2px;  
 	text-align:center; 
 	padding-top:30px;
-	font-weight:700;
+	font-weight:500;
+
+	font-family: 'Frijole', cursive;
+	font-family: 'Black Ops One', cursive;
+	font-family: 'Abril Fatface', cursive;
+	font-family: 'Gravitas One', cursive;
+	font-family: 'Merienda One', cursive;
 	font-family: 'Lobster Two', cursive;
+	font-family: 'Fredoka One', cursive;
+
 	text-shadow: 2px 2px rgba(12, 11, 11, 0.56);
 }
 .ie h1 {
