--- a/css/styles.css
+++ b/css/styles.css
@@ -273,8 +273,9 @@ margin:10px;
 	h1{
 	float:initial;
 	text-align: center;
+	line-height:initial;
 	margin-left:0px;
-	margin-bottom:0px;
+	/*margin-bottom:0px;*/
 	}
 	.styled div {
 	  margin-bottom:10px;
@@ -286,7 +287,7 @@ margin:10px;
 	  height:80px;  
 	}
 	#Content h2 {
-	margin: 0px 0px 0px 0px;
+	margin: 0px 5px 0px 5px;
 	padding: 0px;
 	text-align: center;
 	font-size: 29px;
