--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,7 @@ margin:10px;
 	text-align: center;
 	line-height:initial;
 	margin-left:0px;
-	/*margin-bottom:0px;*/
+	margin-bottom:70px;
 	}
 	.styled div {
 	  margin-bottom:10px;
@@ -290,7 +290,7 @@ margin:10px;
 	margin: 0px 5px 0px 5px;
 	padding: 0px;
 	text-align: center;
-	font-size: 29px;
+	font-size: 23px;
 	font-weight: 300;
 	}
 	.styled {
