--- a/css/styles.css
+++ b/css/styles.css
@@ -75,8 +75,10 @@ a:hover {
 margin-bottom: 62px;
 position: relative;
 width: 100%;
+/*
 height: 110px;
 line-height: 110px;
+*/
 z-index: 1;
 }
 .wrapper {
@@ -121,6 +123,7 @@ background-position: -331px 0px;
 display:block;
 text-align:center;
 margin-top:40px;
+margin-bottom: 10px;
 font-size:18px;
 }
 #Content h2 {
@@ -208,8 +211,8 @@ margin-bottom:30px;
 }
 .styled div {
 display: inline-block;
-font-size: 80px;
-font-weight: 900;
+font-size: 70px;
+font-weight: 700;
 text-align: center;
 margin: 0 1px;
 width: 136px;
@@ -271,7 +274,8 @@ margin:10px;
 }
 @media(max-width:420px){
 	h1{
-	float:initial;
+	float:none;
+	font-size: 55px;
 	text-align: center;
 	line-height:initial;
 	margin-left:0px;
@@ -279,7 +283,7 @@ margin:10px;
 	}
 	.styled div {
 	  margin-bottom:10px;
-	  font-size: 40px;
+	  font-size: 50px;
 	  font-weight: normal; 
 	  text-align: center;
 	  width:80px; 
@@ -287,18 +291,20 @@ margin:10px;
 	  height:80px;  
 	}
 	#Content h2 {
-	margin: 0px 5px 0px 5px;
+	margin: 20px 5px 30px 5px;
 	padding: 0px;
 	text-align: center;
 	font-size: 20px;
 	font-weight: 300;
 	}
+/*
 	.styled {
 	margin-top: 30px;
 	}
 	.intro {
 		margin-bottom: 20px;
 		}
+		*/
 	#subscribe input[type="button"]{
 	margin-top:10px;
 	}
