--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,7 @@ font-size: 28px;
 font-weight: 300;
 color: #fff;
 line-height: 36px;
+text-shadow: 2px 2px rgba(12, 11, 11, 0.56);
 }
 #WindowSlide {
 margin: 0 auto;
